--- a/alt/index.html
+++ b/alt/index.html
@@ -6,12 +6,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="styles.css" type="text/css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
+    <link rel="icon" href="img/favicon.ico">
     <title>PyQuiz - Quiz o Pythonie</title>
 </head>
 
 <body>
     <main id="main_container" class="main-container-cls">
-        <h1 id="header01" class="header01-cls">AntQuiz</h1>
+        <h1 id="header01" class="header01-cls">PyQuiz</h1>
 
         <div class="timer-cls" id="minutes"></div>
         <div class="timer-cls" id="seconds"></div>
